# salt-lint-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: app.rs  cli.rs  config.rs  file_types.rs  formatter.rs  fs.rs  lib.rs  main.rs  problem.rs
src/engine/: collection.rs  context.rs  mod.rs  rule.rs  skip.rs
src/rules/: deprecations.rs  files.rs  formatting.rs  fulltext.rs  jinja.rs  mod.rs  yaml.rs
tests/: cli.rs  config.rs  high_risk_rules.rs  integration_fixtures.rs  low_risk_rules.rs  rule_harness.rs
tests/fixtures/: clean.sls  multiple_findings.sls  raw_only.sls  section_noqa.sls
tests/fixtures/dir_input/: init.sls
