[package]
name = "salt-lint-rs"
version = "0.1.0"
edition = "2024"
default-run = "salt-lint"

[[bin]]
name = "salt-lint"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
ignore = "0.4.25"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.145"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.23.0"
